--- a/templates/account/email/email_confirmation_signup_message.html
+++ b/templates/account/email/email_confirmation_signup_message.html
@@ -1,16 +1,18 @@
-{% load static %}{% load account %}{% load i18n %}{% autoescape off %}
+{% load static %}
+{% load account %}
+{% load i18n %}
+{% autoescape off %}
 <center>
     <h3>{{ site_name }}</h3>
     <h4>Подтвердите Ваш Email ID</h4>
     <p>
         Подтверждаете? Нажмите на кнопку!
     </p>
-    <a
-    href="http://{{current_site}}/auth/signup-verification/{{key}}"
-    target="_blank"
-    rel="noopener noreferrer"
-    <button>Подтверждаю Email</button>
-    ></a>
+    <a href="http://{{ current_site }}/auth/signup-verification/{{ key }}" 
+       target="_blank" 
+       rel="noopener noreferrer">
+        <button>Подтверждаю Email</button>
+    </a>
     <footer>
         <div>
             <small>Спасибо</small>
